package EjercicioEntregable10;

class Casa extends Vivienda {
    public Casa(int identificadorInmobiliario, double area, String direccion, int numHabitaciones, int numBanos) {
        super(identificadorInmobiliario, area, direccion, numHabitaciones, numBanos);
    }

    @Override
    public void imprimir() {
        super.imprimir();
    }
}