package EjercicioEntregable10;

class CasaIndependiente extends Casa {
    public CasaIndependiente(int identificadorInmobiliario, double area, String direccion, int numHabitaciones, int numBanos) {
        super(identificadorInmobiliario, area, direccion, numHabitaciones, numBanos);
    }

    @Override
    public void imprimir() {
        super.imprimir();
    }
}
