package EjercicioEntregable10;

public class InmuebleComercial extends Inmueble {
    public InmuebleComercial(int identificadorInmobiliario, double area, String direccion) {
        super(identificadorInmobiliario, area, direccion);
    }

    @Override
    public void imprimir() {
        super.imprimir();
    }
}
