package EjercicioEntregable10;

public class Oficina extends InmuebleComercial {
    public Oficina(int identificadorInmobiliario, double area, String direccion) {
        super(identificadorInmobiliario, area, direccion);
    }

    @Override
    public void imprimir() {
        super.imprimir();
    }
}
